# prd-tool

./: .gitignore  CLAUDE.md  README.md  hatch_build.py  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
docs/specs/dashboard/: viewer.md
docs/specs/install/: single-install.md
frontend/: .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  ThemeProvider.test.tsx  ThemeProvider.tsx  api.native.test.ts  api.ts  index.css  main.tsx  types.ts  useDocumentTitle.ts  useSse.test.ts  useSse.ts  useUnfinishedOnly.ts  vite-env.d.ts
frontend/src/components/: BugCard.tsx  FigmaThumb.test.tsx  FigmaThumb.tsx  RichContent.test.tsx  RichContent.tsx  RuleCard.tsx  Sidebar.tsx  UiReviewBlock.tsx  UnfinishedToggle.tsx
frontend/src/lib/: cacheSync.test.ts  cacheSync.ts  nativeMode.ts  richContent.ts  staticMode.ts  utils.test.ts
frontend/src/pages/: Feature.tsx  Home.tsx
frontend/src/test/: setup.ts
prd/: index.xml
prd/content/: rich-content.xml
prd/dashboard/: static-export.xml  viewer.xml
prd/discovery/: root-and-refs.xml
prd/install/: single-install.xml
prd/view/: native.xml
skills/prd/: SKILL.md
skills/prd/scripts/: prd-tool.py
src/prd_tool/: __init__.py  __main__.py  cli.py  constants.py  format.py  root.py  stats.py  validate.py
src/prd_tool/dashboard/: __init__.py  edits.py  export.py  native.py  ops.py  repo.py  server.py  sse.py
src/prd_tool/dashboard/static/: index.html
src/prd_tool/dashboard/static/assets/: index-3a_404d4.css  index-Bm3wxMM9.js  index-BtVwAry5.js  index-BvJXnjWT.js  index-CJy5Dgrb.js  index-CL4rZNZN.js  index-C_S8r372.css  index-Cht-sAZg.js  index-CiWooYBQ.js  index-CrCUHoQV.css  index-D2-ZvntJ.css  index-DVPz5VDt.js  index-HLGhTxtH.css  index-Ibef6FuB.css  index-Lbzyl9dx.css
tests/: test_cli.py  test_cli_view.py  test_dashboard.py  test_dashboard_edits.py  test_dashboard_native.py  test_dashboard_ops.py  test_dashboard_sse.py  test_export.py  test_format.py  test_root.py  test_stats.py  test_validate.py
tests/fixtures/: index.xml  invalid_bad_root.xml  invalid_bad_status.xml  invalid_duplicate_rule.xml  invalid_missing_attr.xml  invalid_ordering.xml  valid_full.xml  valid_minimal.xml
