[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prd-tool"
version = "0.1.0"
description = "PRD XML validation, formatting, and stats tool"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "yjmeqt" }]
dependencies = []

[project.scripts]
prd = "prd_tool.cli:main"

[dependency-groups]
dev = ["pytest", "ruff", "mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
