[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prd_tool"]

[tool.hatch.build.targets.wheel.force-include]
"src/prd_tool/dashboard/static" = "prd_tool/dashboard/static"

# Ensure the dashboard static bundle exists before hatchling collects files.
# Real bundle is produced by `pnpm --dir frontend build`; otherwise a stub is
# dropped in so installs from git / editable installs don't fail.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.editable.hooks.custom]
path = "hatch_build.py"

[project]
name = "prd-tool"
version = "0.1.0"
description = "PRD XML validation, formatting, and stats tool"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "yjmeqt" }]
dependencies = []

[project.optional-dependencies]
dashboard = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "watchfiles>=0.22",
]

[project.scripts]
prd = "prd_tool.cli:main"

[dependency-groups]
dev = ["pytest", "ruff", "mypy", "fastapi>=0.115", "uvicorn>=0.30", "watchfiles>=0.22", "httpx>=0.27"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
